# agentops-monitor

./: .env.example  DEPLOYMENT_GUIDE.md  HOW_IT_WORKS.md  PRODUCTION_READINESS.md  PROJECT_OVERVIEW.md  PYPI_PUBLISHING_GUIDE.md  README.md
backend/: .dockerignore  .env.example  DOCKER_SETUP_GUIDE.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  docker-start.sh  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: analytics.py  auth.py  projects.py  traces.py
backend/app/core/: cost.py  security.py
backend/app/crud/: analytics.py  project.py  trace.py  user.py
backend/app/models/: __init__.py  project.py  span.py  trace.py  user.py
backend/app/schemas/: analytics.py  auth.py  project.py  trace.py
frontend/: IMPROVEMENTS.md  VISUAL_GUIDE.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: LLMCallCard.tsx  ToolCallCard.tsx  app-sidebar.tsx  nav-main.tsx  nav-secondary.tsx
frontend/components/analytics/: ExportButton.tsx  (+5 more)
frontend/libs/: api.ts  utils.ts
frontend/types/: analytics.ts  index.ts
sdk/: .env.example  ERRORS_FIXED.md  FIX_SUMMARY.md  LICENSE  MANIFEST.in  MANUAL_SETUP.sql  README.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  SUCCESS_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
sdk/agentops_monitor/: __init__.py  client.py  context.py  decorators.py  name_utils.py  tracer.py
sdk/agentops_monitor/adk/: a2a_monitor.py  agent_wrapper.py  runner_wrapper.py  tool_wrapper.py
sdk/examples/: setup_test_project.py  simple_adk_agent.py  test_adk_agent.py  test_adk_simple.py  test_tool_capture.py  test_tool_manual.py  test_trace_names.py
(+7 files in other folders)
